# configparserc

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  NOTICE  README.md  README.rst  configparserc.pyx  configpraserc.pyi  glibc_fix.h  pyproject.toml  setup.cfg  setup.py  test_conf.ini  test_conf2.ini  test_conf3.ini  test_conf_err2.ini  test_yaml_config.yaml  tests.py  tox.ini  tox_build.ini
.run/: Full.run.xml
configparserc/: __init__.py  __init__.pyi  config.pyi  config.pyx  tools.pyi  tools.pyx
configparserc-stubs/: config.pyi  tools.pyi
configparserc/include/: _config.h
include/: _config.h  fix.h
