[metadata]
name = configparserc
version = attr: configparserc.__version__
description = Python (Cython) based implementation of ConfigParser based on POSIX and stdlib functions.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache Software License
author = Sergey Klyuykov
author_email = onegreyonewhite@mail.ru
url = https://gitlab.com/onegreyonewhite/configparserc
keywords = config, configparser, configparserc, ini
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX
    License :: OSI Approved :: Apache Software License
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.6
setup_requires =
    cython>0.29,<0.30

[build_sphinx]
project = 'ConfigParserC'

[aliases]
