[metadata]
name = configparserc
version = 2.0.1
description = Python (Cython) based implementation of ConfigParser based on POSIX and stdlib functions.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache Software License
author = Sergey Klyuykov
author_email = onegreyonewhite@mail.ru
url = https://gitlab.com/onegreyonewhite/configparserc
keywords = config, configparser, configparserc, ini
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX
    License :: OSI Approved :: Apache Software License
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.112
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
setup_requires =
    cython~=3.0.2

[build_sphinx]
project = 'ConfigParserC'

[aliases]
